# mysh

./: .gitignore  CMakeLists.txt  README.md  build.zig  zigmod.yml
.github/workflows/: linux.yml
include/: ast.hpp  astprinter.hpp  globals.hpp  interpreter.hpp  spawn.hpp  symtable.hpp  token.hpp  tokenizer.hpp
include/core/: algorithm.hpp  argparser.hpp  array.hpp  assert.hpp  buffer.hpp  file.hpp  hash.hpp  hashtable.hpp  initializerlist.hpp  list.hpp  mem.hpp  meta.hpp  optional.hpp  ownptr.hpp  print.hpp  printbase.hpp  stacktrace.hpp  staticarray.hpp  string.hpp  stringbuilder.hpp  stringview.hpp
src/: argparser.zig  ast.cpp  ast.zig  astprint.zig  astprinter.cpp  builtins.zig  escape.zig  globals.cpp  globals.zig  interpolate.zig  interpreter.cpp  interpreter.zig  main.cpp  main.zig  ptr.zig  repl.zig  spawn.cpp  spawn.zig  string.cpp  symtable.cpp  symtable.zig  token.cpp  token.zig  tokenizer.cpp  tokenizer.zig  value.zig
src/core/: argparser.cpp  assert.cpp  file.cpp  hash.cpp  print.cpp  stacktrace.cpp  string.cpp  stringbuilder.cpp  stringview.cpp
test/: array.mysh  array_nesting.mysh  bad.mysh  bool_test.mysh  branch.mysh  builtin_print_test.mysh  complications.mysh  fn.mysh  gen_outputs.sh  int_test.mysh  is_my_city.mysh  logical_op_test.mysh  pipe.mysh  pipe_classic.mysh  predicate.mysh  scope.mysh  source.mysh  string_interpolation.mysh  struct.mysh  subtract_test.mysh  table.mysh  table_indexing.mysh  test_all.sh  while.mysh
test/interpreter_error_tests/: type_mismatch_01.mysh  type_mismatch_02.mysh  valueless_expression_01.mysh  (+1 more)
(+20 files in other folders)
